# sudoku

./: .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.tmp/vercel/: project.tgz
api/: index.py
scripts/: set_admin.py
src/app/: main.py  schemas.py
src/app/core/: auth.py  db.py  hints.py  sudoku.py  sudoku_vicious.py
src/app/routers/: auth.py  custom_puzzles.py  deps.py  gameplay.py
src/app/static/: admin.html  admin.js  app.js  index.html  style.css
src/app/static/js/: api-client.js  app-utils.js
tests/: test_hints.py  test_main.py
